--- a/templates/home.html
+++ b/templates/home.html
@@ -33,16 +33,16 @@
 
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link link" href="#course_display">Courses</a>
+            <a class="nav-link link" href="#course_display">Subjects</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link link" href="#professor_display">Professors</a>
+            <a class="nav-link link" href="#professor_display">Teachers</a>
           </li>
           <li class="nav-item text-center">
             <a class="nav-link link " href="#classroom_display">Classrooms</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link link " href="#class_display">Classes</a>
+            <a class="nav-link link " href="#class_display">Specialities</a>
           </li>
 
         </ul>
@@ -52,8 +52,8 @@
 
     <img id="branding" src="{% static 'media/main_image.png' %}">
 
-    <div><h1 id="tag">WE CARE FOR YOU</h1></div>
-    <div><p id="para1">We have made it easier than ever to create a timetable best suited to your needs.your customized timetable is just one click away.</p></div>
+    <div><h1 id="tag">Interactive TimeTable</h1></div>
+    <div><p id="para1">this application is used to create interactive TimeTables for universities based on CSP algorithms</p></div>
     <a href="#"><input type="button" class="button" value="Generate Timetable"></a>
 
     <a href="#courses"><input type="button" class="info" value="Add Information"></a>
@@ -66,9 +66,10 @@
     <hr>
     <div id="course_display">
         <div id="courses">
-            <h3 id="tag_course">Courses</h3>
-            <p id="para_course">You can easily add courses into database by just clicking the button below. This data will be retrieved while generating the time table.</p>
-            <a  href="#"><button class="course_button" >Add Course</button></a>
+            <h3 id="tag_course">Subjects</h3>
+            <p id="para_course">You can easily add Subjects into database by just clicking the button below. This data will be retrieved while generating the time table.</p>
+            <a  href="{% url 'add-subject' %}"><button class="course_button" >Add Subject</button></a>
+            <a href="{% url 'list-subject' %}"><input type="button" class="info" value="Subjects list"></a>
         </div>
         <div><img id="course_img" src="{% static 'media/courses-01.png' %}"></div>
     </div>
@@ -83,9 +84,10 @@
 
     <div id="professor_display">
         <div id="professor">
-            <h3 id="prof_tag">Professors</h3>
+            <h3 id="prof_tag">Teachers</h3>
             <p id="prof_para">Professors data will be saved in the database. You will be directed to the professor form where you will add the information about professor.</p>
-            <a href="#" ><input type="button" class="prof_button" value="Add Professor"></a>
+            <a href="{% url 'add-teacher' %}" ><input type="button" class="prof_button" value="Add Professor"></a>
+            <a href="{% url 'list-teacher' %}"><input type="button" class="info" value="Teachers list"></a>
         </div>
          <div><img alt="professor" id="prof_img" src="{% static 'media/professor-01.png' %}"></div>
     </div>
@@ -102,7 +104,9 @@
         <div id="courses">
             <h3 id="tag_course">Classrooms</h3>
             <p id="para_course">In this app, You have facility to add more than one class rooms at a time and it will generate the suitable timetable for you which you can access any time in your account.</p>
-            <a href="#"><button class="course_button">Add Classroom</button></a>
+            <a href="{% url 'add-room' %}""><button class="course_button">Add Classroom</button></a>
+            <a href="{% url 'list-room' %}"><input type="button" class="info" value="Rooms list"></a>
+
         </div>
          <div><img  id="course_img" src="{% static 'media/classroom.png' %}"></div>
     </div>
@@ -116,9 +120,10 @@
 
     <div id="class_display">
         <div id="professor">
-            <h3 id="prof_tag">Sections</h3>
+            <h3 id="prof_tag">Specialities</h3>
             <p id="prof_para">In this app, You have facility to add more than one classes at a time and it will generate the suitable timetable for you which you can access any time in your account.</p>
-            <a href="#"><input type="button" class="prof_button" value="Add Section"></a>
+            <a href="{% url 'add-speciality' %}"><input type="button" class="prof_button" value="Add Speciality"></a>
+            <a href="{% url 'list-speciality' %}"><input type="button" class="info" value="Specialities list"></a>
         </div>
          <div><img alt="class" id="prof_img" src="{% static 'media/class-01.png' %}"></div>
     </div>
