--- a/templates/AddTeacher.html
+++ b/templates/AddTeacher.html
@@ -1,5 +1,5 @@
 
-{% extends 'timetableapp/main.html' %}
+{% extends 'main.html' %}
 {% load static %}
 {% block content %}
 
@@ -7,13 +7,13 @@
      <div class="display">
         <div class="box">
             <div class="header">
-                Professor Info
+                Teacher Info
             </div>
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
                      {% load crispy_forms_tags %}
-                     {{ professor|crispy }}
+                     {{ teacher|crispy }}
                     <input type="submit" value="Save Here" class="saveButton">
                 </form>
             </div>
@@ -21,7 +21,7 @@
 
             <img class="gif" alt="books" src="{% static 'media/20135-profesor.gif' %}">
 			<div class="margin">
-            <div class="viewtable"><p>You can view your added data here.<a href="{% url 'professor_view' %}">Click Here</a></p></div>
+            <div class="viewtable"><p>You can view your added Teachers here.<a href="{% url 'list-teacher' %}">Click Here</a></p></div>
 			</div>
 
     </div>
