--- a/templates/AddSpeciality.html
+++ b/templates/AddSpeciality.html
@@ -1,17 +1,17 @@
-{% extends 'timetableapp/main.html' %}
+{% extends 'main.html' %}
 {% load static %}
 {% block content %}
 
      <div class="display">
         <div class="box">
             <div class="header">
-                Class
+                Speciality
             </div>
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
-                    {{ section|crispy }}
+                    {{ speciality|crispy }}
                     
                     <input type="submit" value="Next" class="saveButton">
                 </form>
@@ -19,7 +19,7 @@
         </div>
 
             <img class="gif" alt="books" src="{% static 'media/21903-online-class-animation.gif' %}">
-            <div class="viewtable"><p>You can view your added class here.<a href="{% url 'class_view' %}">View Classes</a></p></div>
+            <div class="viewtable"><p>You can view your added specialities here.<a href="{% url 'list-speciality' %}">View specialities</a></p></div>
 
     </div>
 
