--- a/templates/deleteSpeciality.html
+++ b/templates/deleteSpeciality.html
@@ -1,14 +1,14 @@
-{% extends 'timetableapp/main.html' %}
+{% extends 'main.html' %}
 {% load static %}
 {% block content %}
 
     <div class="deleteBox">
-    <h3 id="deleteText">Do You want to delete "{{ delete.class_id }} - {{ delete.class_name }}"?</h3>
-        <form method="POST" action="{% url 'delete-class' delete.class_id %}">
+    <h3 id="deleteText">Do You want to delete "{{ delete_speciality.speciality_name }} "?</h3>
+        <form method="POST" action="{% url 'delete-speciality' delete_speciality.speciality_id %}">
 
     <input class="deleteButton" type="submit" value="Delete">
         {% csrf_token %}
-    <a href="{% url 'class_view' %}">
+    <a href="{% url 'list-speciality' %}">
     <input class="cancelButton" type="submit" value="Cancel">
     </a>
     </form>
