--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" src="extensions/sticky-header/bootstrap-table-sticky-header.css">
     <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+     <!-- Website Title -->
+    <title>Timetable | CSP </title>
+
+
+	<!-- Favicon  -->
+    <link rel="icon" href="{% static 'media/ensias.png' %}">
 
 
 </head>
