adding timetable pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,7 @@
                            <h1><span class="turquoise">Time table Application</span> </h1>
                             <p class="p-large">This Application Is Used To Create Interactive TimeTables For Universities Based On CSP Algorithms</p>
                             <a class="btn-solid-lg page-scroll" href="{% url 'generate-timetable' %}">GENERATE TIMETABLE</a>
-							 <a class="btn-solid-lg page-scroll" href="#services">TIMETABLES LIST</a>
+							 <a class="btn-solid-lg page-scroll" href="{% url 'list-timetable' %}">TIMETABLES LIST</a>
 
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
