adding design to subjects list

--- a/static/css/swiper.css
+++ b/static/css/swiper.css
@@ -272,7 +272,7 @@
   height: 8px;
   display: inline-block;
   border-radius: 100%;
-  background: #000;
+  background: skyblue;
   opacity: 0.2;
 }
 button.swiper-pagination-bullet {
