--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -7,11 +7,11 @@
 
 .navbar {
     padding: 15px 10px;
-    background: #fff;
+    background: skyblue;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 3px rgba(238, 230, 230, 0.1);
 }
 
 .navbar-btn {
