--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -130,10 +130,10 @@ h6 {
 	letter-spacing: 1px;
 	font-weight: bolder;
 	color: white ;
-	background: black;
+	background: skyblue;
 	margin-left: 15px;
 	margin-top: 40px;
-	border-color: black ;
+	border-color: skyblue ;
 	border-radius: 0 ;
 	border-style: solid;
 	border-width: 3px ;
