--- a/templates/main.html
+++ b/templates/main.html
@@ -39,7 +39,64 @@
 
 
                     <div class="collapse navbar-collapse collapse" data-toggle="collapse" aria-expanded="false"  id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ">
+
+
+                         <!-- Navigation -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+
+
+        <!-- Text Logo - Use this if you don't have a graphic logo -->
+        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Evolo</a> -->
+
+        <!-- Image Logo -->
+       <a  href="#"><img src="{% static 'media/ensias.png' %}" alt="alternative"></a>
+
+        <!-- Mobile Menu Toggle Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-awesome fas fa-bars"></span>
+            <span class="navbar-toggler-awesome fas fa-times"></span>
+        </button>
+        <!-- end of mobile menu toggle button -->
+
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'list-subject' %}">Subjects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'list-teacher' %}">Teachers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'list-room' %}">Classrooms</a>
+                </li>
+				<li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'list-speciality' %}">Specialities</a>
+                </li>
+
+                <!-- Dropdown Menu -->
+                <li class="nav-item dropdown">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Terms Conditions</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Privacy Policy</span></a>
+                    </div>
+                </li>
+                <!-- end of dropdown menu -->
+
+
+            </ul>
+
+            </span>
+        </div>
+    </nav> <!-- end of navbar -->
+    <!-- end of navigation -->
+
+
+
 
                             <li class="nav-item text-center active">
                                 <a class="nav-link link" href="{% url 'home' %}">Home</a>
